
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ UINT_PTR ;


 int ANSI_FIXED_FONT ;
 int ANSI_VAR_FONT ;
 int BLACK_BRUSH ;
 int BLACK_PEN ;
 int DC_BRUSH ;
 int DC_PEN ;
 int DEFAULT_GUI_FONT ;
 int DEFAULT_PALETTE ;
 int DEVICE_DEFAULT_FONT ;
 int DKGRAY_BRUSH ;
 scalar_t__ ERROR_SUCCESS ;
 scalar_t__ GDI_HANDLE_GET_TYPE (int *) ;
 scalar_t__ GDI_HANDLE_STOCK_MASK ;
 scalar_t__ GDI_OBJECT_TYPE_BITMAP ;
 scalar_t__ GDI_OBJECT_TYPE_BRUSH ;
 scalar_t__ GDI_OBJECT_TYPE_COLORSPACE ;
 scalar_t__ GDI_OBJECT_TYPE_FONT ;
 scalar_t__ GDI_OBJECT_TYPE_PALETTE ;
 scalar_t__ GDI_OBJECT_TYPE_PEN ;
 int GRAY_BRUSH ;
 scalar_t__ GetLastError () ;
 int * GetStockObject (int) ;
 int LTGRAY_BRUSH ;
 int NULL_BRUSH ;
 int NULL_PEN ;
 int OEM_FIXED_FONT ;
 int RTEST (int) ;
 int SYSTEM_FIXED_FONT ;
 int SYSTEM_FONT ;
 int SetLastError (scalar_t__) ;
 int TEST (int) ;
 int WHITE_BRUSH ;
 int WHITE_PEN ;

void Test_GetStockObject()
{

 SetLastError(ERROR_SUCCESS);
 RTEST(GetStockObject(0) != ((void*)0));
 TEST(GetStockObject(20) != ((void*)0));
 RTEST(GetStockObject(21) != ((void*)0));
 RTEST(GetStockObject(-1) == ((void*)0));
 RTEST(GetStockObject(9) == ((void*)0));
 RTEST(GetStockObject(22) == ((void*)0));
 RTEST(GetLastError() == ERROR_SUCCESS);


 RTEST((UINT_PTR)GetStockObject(WHITE_BRUSH) && GDI_HANDLE_STOCK_MASK);


 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(WHITE_BRUSH)) == GDI_OBJECT_TYPE_BRUSH);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(LTGRAY_BRUSH)) == GDI_OBJECT_TYPE_BRUSH);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(GRAY_BRUSH)) == GDI_OBJECT_TYPE_BRUSH);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(DKGRAY_BRUSH)) == GDI_OBJECT_TYPE_BRUSH);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(BLACK_BRUSH)) == GDI_OBJECT_TYPE_BRUSH);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(NULL_BRUSH)) == GDI_OBJECT_TYPE_BRUSH);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(WHITE_PEN)) == GDI_OBJECT_TYPE_PEN);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(BLACK_PEN)) == GDI_OBJECT_TYPE_PEN);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(NULL_PEN)) == GDI_OBJECT_TYPE_PEN);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(OEM_FIXED_FONT)) == GDI_OBJECT_TYPE_FONT);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(ANSI_FIXED_FONT)) == GDI_OBJECT_TYPE_FONT);
 TEST(GDI_HANDLE_GET_TYPE(GetStockObject(ANSI_VAR_FONT)) == GDI_OBJECT_TYPE_FONT);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(SYSTEM_FONT)) == GDI_OBJECT_TYPE_FONT);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(DEVICE_DEFAULT_FONT)) == GDI_OBJECT_TYPE_FONT);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(DEFAULT_PALETTE)) == GDI_OBJECT_TYPE_PALETTE);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(SYSTEM_FIXED_FONT)) == GDI_OBJECT_TYPE_FONT);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(DEFAULT_GUI_FONT)) == GDI_OBJECT_TYPE_FONT);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(DC_BRUSH)) == GDI_OBJECT_TYPE_BRUSH);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(DC_PEN)) == GDI_OBJECT_TYPE_PEN);
 TEST(GDI_HANDLE_GET_TYPE(GetStockObject(20)) == GDI_OBJECT_TYPE_COLORSPACE);
 RTEST(GDI_HANDLE_GET_TYPE(GetStockObject(21)) == GDI_OBJECT_TYPE_BITMAP);
}
